# ndd-json-viewer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  ndd-json-viewer.pro
src/: define.h  dllmain.cpp  docktitlewidget.cpp  docktitlewidget.h  docktitlewidget.ui  image.qrc  jsonhandler.cpp  jsonhandler.h  jsonnode.h  jsonviewsettings.cpp  jsonviewsettings.h  jsonviewsettings.ui  nddjsonplugin.cpp  nddjsonplugin.h  pluginGl.h  qjsonmodel.cpp  qjsonmodel.h  rapidjsonhandler.cpp  rapidjsonhandler.h  scintillaeditor.cpp  scintillaeditor.h
